Use fuzzy match to filter old payloads

--- a/src/Telegrafer/Views/TcpClientView.axaml
+++ b/src/Telegrafer/Views/TcpClientView.axaml
@@ -28,7 +28,7 @@
                        Items="{Binding OldPayloads}"
                        MinimumPrefixLength="0"
                        FilterMode="ContainsOrdinal"
-                       />
+                       Name="box" />
 
     </DockPanel>
 
